New Constructor for Capability that created a default Metadata, made code use new constructor